QtBeef/src/Qt/qmainwindow.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QMainWindow
// --------------------------------------------------------------
[CRepr]
struct QMainWindow_Ptr: void
{
}
extension CQt
{
	[LinkName("QMainWindow_new")]
	public static extern QMainWindow_Ptr* QMainWindow_new(QWidget_Ptr* parent);
	[LinkName("QMainWindow_new2")]
	public static extern QMainWindow_Ptr* QMainWindow_new2();
	[LinkName("QMainWindow_new3")]
	public static extern QMainWindow_Ptr* QMainWindow_new3(QWidget_Ptr* parent, void* flags);
	[LinkName("QMainWindow_Delete")]
	public static extern void QMainWindow_Delete(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_MetaObject")]
	public static extern QMetaObject_Ptr* QMainWindow_MetaObject(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_Qt_Metacast")]
	public static extern void* QMainWindow_Qt_Metacast(QMainWindow_Ptr* self, c_char* param1);
	[LinkName("QMainWindow_Qt_Metacall")]
	public static extern c_int QMainWindow_Qt_Metacall(QMainWindow_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QMainWindow_Tr")]
	public static extern libqt_string QMainWindow_Tr(c_char* s);
	[LinkName("QMainWindow_IconSize")]
	public static extern QSize_Ptr QMainWindow_IconSize(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_SetIconSize")]
	public static extern void QMainWindow_SetIconSize(QMainWindow_Ptr* self, QSize_Ptr* iconSize);
	[LinkName("QMainWindow_ToolButtonStyle")]
	public static extern Qt_ToolButtonStyle QMainWindow_ToolButtonStyle(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_SetToolButtonStyle")]
	public static extern void QMainWindow_SetToolButtonStyle(QMainWindow_Ptr* self, Qt_ToolButtonStyle toolButtonStyle);
	[LinkName("QMainWindow_IsAnimated")]
	public static extern bool QMainWindow_IsAnimated(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_IsDockNestingEnabled")]
	public static extern bool QMainWindow_IsDockNestingEnabled(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_DocumentMode")]
	public static extern bool QMainWindow_DocumentMode(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_SetDocumentMode")]
	public static extern void QMainWindow_SetDocumentMode(QMainWindow_Ptr* self, bool enabled);
	[LinkName("QMainWindow_TabShape")]
	public static extern QTabWidget_TabShape QMainWindow_TabShape(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_SetTabShape")]
	public static extern void QMainWindow_SetTabShape(QMainWindow_Ptr* self, QTabWidget_TabShape tabShape);
	[LinkName("QMainWindow_TabPosition")]
	public static extern QTabWidget_TabPosition QMainWindow_TabPosition(QMainWindow_Ptr* self, Qt_DockWidgetArea area);
	[LinkName("QMainWindow_SetTabPosition")]
	public static extern void QMainWindow_SetTabPosition(QMainWindow_Ptr* self, void* areas, QTabWidget_TabPosition tabPosition);
	[LinkName("QMainWindow_SetDockOptions")]
	public static extern void QMainWindow_SetDockOptions(QMainWindow_Ptr* self, void* options);
	[LinkName("QMainWindow_DockOptions")]
	public static extern void* QMainWindow_DockOptions(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_IsSeparator")]
	public static extern bool QMainWindow_IsSeparator(QMainWindow_Ptr* self, QPoint_Ptr* pos);
	[LinkName("QMainWindow_MenuBar")]
	public static extern QMenuBar_Ptr* QMainWindow_MenuBar(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_SetMenuBar")]
	public static extern void QMainWindow_SetMenuBar(QMainWindow_Ptr* self, QMenuBar_Ptr* menubar);
	[LinkName("QMainWindow_MenuWidget")]
	public static extern QWidget_Ptr* QMainWindow_MenuWidget(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_SetMenuWidget")]
	public static extern void QMainWindow_SetMenuWidget(QMainWindow_Ptr* self, QWidget_Ptr* menubar);
	[LinkName("QMainWindow_StatusBar")]
	public static extern QStatusBar_Ptr* QMainWindow_StatusBar(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_SetStatusBar")]
	public static extern void QMainWindow_SetStatusBar(QMainWindow_Ptr* self, QStatusBar_Ptr* statusbar);
	[LinkName("QMainWindow_CentralWidget")]
	public static extern QWidget_Ptr* QMainWindow_CentralWidget(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_SetCentralWidget")]
	public static extern void QMainWindow_SetCentralWidget(QMainWindow_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QMainWindow_TakeCentralWidget")]
	public static extern QWidget_Ptr* QMainWindow_TakeCentralWidget(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_SetCorner")]
	public static extern void QMainWindow_SetCorner(QMainWindow_Ptr* self, Qt_Corner corner, Qt_DockWidgetArea area);
	[LinkName("QMainWindow_Corner")]
	public static extern Qt_DockWidgetArea QMainWindow_Corner(QMainWindow_Ptr* self, Qt_Corner corner);
	[LinkName("QMainWindow_AddToolBarBreak")]
	public static extern void QMainWindow_AddToolBarBreak(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_InsertToolBarBreak")]
	public static extern void QMainWindow_InsertToolBarBreak(QMainWindow_Ptr* self, QToolBar_Ptr* before);
	[LinkName("QMainWindow_AddToolBar")]
	public static extern void QMainWindow_AddToolBar(QMainWindow_Ptr* self, Qt_ToolBarArea area, QToolBar_Ptr* toolbar);
	[LinkName("QMainWindow_AddToolBar2")]
	public static extern void QMainWindow_AddToolBar2(QMainWindow_Ptr* self, QToolBar_Ptr* toolbar);
	[LinkName("QMainWindow_AddToolBar3")]
	public static extern QToolBar_Ptr* QMainWindow_AddToolBar3(QMainWindow_Ptr* self, libqt_string* title);
	[LinkName("QMainWindow_InsertToolBar")]
	public static extern void QMainWindow_InsertToolBar(QMainWindow_Ptr* self, QToolBar_Ptr* before, QToolBar_Ptr* toolbar);
	[LinkName("QMainWindow_RemoveToolBar")]
	public static extern void QMainWindow_RemoveToolBar(QMainWindow_Ptr* self, QToolBar_Ptr* toolbar);
	[LinkName("QMainWindow_RemoveToolBarBreak")]
	public static extern void QMainWindow_RemoveToolBarBreak(QMainWindow_Ptr* self, QToolBar_Ptr* before);
	[LinkName("QMainWindow_UnifiedTitleAndToolBarOnMac")]
	public static extern bool QMainWindow_UnifiedTitleAndToolBarOnMac(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_ToolBarArea")]
	public static extern Qt_ToolBarArea QMainWindow_ToolBarArea(QMainWindow_Ptr* self, QToolBar_Ptr* toolbar);
	[LinkName("QMainWindow_ToolBarBreak")]
	public static extern bool QMainWindow_ToolBarBreak(QMainWindow_Ptr* self, QToolBar_Ptr* toolbar);
	[LinkName("QMainWindow_AddDockWidget")]
	public static extern void QMainWindow_AddDockWidget(QMainWindow_Ptr* self, Qt_DockWidgetArea area, QDockWidget_Ptr* dockwidget);
	[LinkName("QMainWindow_AddDockWidget2")]
	public static extern void QMainWindow_AddDockWidget2(QMainWindow_Ptr* self, Qt_DockWidgetArea area, QDockWidget_Ptr* dockwidget, Qt_Orientation orientation);
	[LinkName("QMainWindow_SplitDockWidget")]
	public static extern void QMainWindow_SplitDockWidget(QMainWindow_Ptr* self, QDockWidget_Ptr* after, QDockWidget_Ptr* dockwidget, Qt_Orientation orientation);
	[LinkName("QMainWindow_TabifyDockWidget")]
	public static extern void QMainWindow_TabifyDockWidget(QMainWindow_Ptr* self, QDockWidget_Ptr* first, QDockWidget_Ptr* second);
	[LinkName("QMainWindow_TabifiedDockWidgets")]
	public static extern void* QMainWindow_TabifiedDockWidgets(QMainWindow_Ptr* self, QDockWidget_Ptr* dockwidget);
	[LinkName("QMainWindow_RemoveDockWidget")]
	public static extern void QMainWindow_RemoveDockWidget(QMainWindow_Ptr* self, QDockWidget_Ptr* dockwidget);
	[LinkName("QMainWindow_RestoreDockWidget")]
	public static extern bool QMainWindow_RestoreDockWidget(QMainWindow_Ptr* self, QDockWidget_Ptr* dockwidget);
	[LinkName("QMainWindow_DockWidgetArea")]
	public static extern Qt_DockWidgetArea QMainWindow_DockWidgetArea(QMainWindow_Ptr* self, QDockWidget_Ptr* dockwidget);
	[LinkName("QMainWindow_ResizeDocks")]
	public static extern void QMainWindow_ResizeDocks(QMainWindow_Ptr* self, void** docks, void** sizes, Qt_Orientation orientation);
	[LinkName("QMainWindow_SaveState")]
	public static extern void* QMainWindow_SaveState(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_RestoreState")]
	public static extern bool QMainWindow_RestoreState(QMainWindow_Ptr* self, void** state);
	[LinkName("QMainWindow_CreatePopupMenu")]
	public static extern QMenu_Ptr* QMainWindow_CreatePopupMenu(QMainWindow_Ptr* self);
	[LinkName("QMainWindow_SetAnimated")]
	public static extern void QMainWindow_SetAnimated(QMainWindow_Ptr* self, bool enabled);
	[LinkName("QMainWindow_SetDockNestingEnabled")]
	public static extern void QMainWindow_SetDockNestingEnabled(QMainWindow_Ptr* self, bool enabled);
	[LinkName("QMainWindow_SetUnifiedTitleAndToolBarOnMac")]
	public static extern void QMainWindow_SetUnifiedTitleAndToolBarOnMac(QMainWindow_Ptr* self, bool set);
	[LinkName("QMainWindow_IconSizeChanged")]
	public static extern void QMainWindow_IconSizeChanged(QMainWindow_Ptr* self, QSize_Ptr* iconSize);
	[LinkName("QMainWindow_ToolButtonStyleChanged")]
	public static extern void QMainWindow_ToolButtonStyleChanged(QMainWindow_Ptr* self, Qt_ToolButtonStyle toolButtonStyle);
	[LinkName("QMainWindow_TabifiedDockWidgetActivated")]
	public static extern void QMainWindow_TabifiedDockWidgetActivated(QMainWindow_Ptr* self, QDockWidget_Ptr* dockWidget);
	[LinkName("QMainWindow_ContextMenuEvent")]
	public static extern void QMainWindow_ContextMenuEvent(QMainWindow_Ptr* self, QContextMenuEvent_Ptr* event);
	[LinkName("QMainWindow_Event")]
	public static extern bool QMainWindow_Event(QMainWindow_Ptr* self, QEvent_Ptr* event);
	[LinkName("QMainWindow_Tr2")]
	public static extern libqt_string QMainWindow_Tr2(c_char* s, c_char* c);
	[LinkName("QMainWindow_Tr3")]
	public static extern libqt_string QMainWindow_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QMainWindow_AddToolBarBreak1")]
	public static extern void QMainWindow_AddToolBarBreak1(QMainWindow_Ptr* self, Qt_ToolBarArea area);
	[LinkName("QMainWindow_SaveState1")]
	public static extern void* QMainWindow_SaveState1(QMainWindow_Ptr* self, c_int version);
	[LinkName("QMainWindow_RestoreState2")]
	public static extern bool QMainWindow_RestoreState2(QMainWindow_Ptr* self, void** state, c_int version);
}
